# s25rttr-android

./: .gitignore  .gitmodules  README.md  build_dependencies.sh  patches.sh
.github/workflows/: android-build.yml  android.yml  main.yml
android-project/: build.sh  local.properties
android-project/app/: build.gradle
android-project/app/jni/: CMakeLists.txt  boost  bzip2  gl4es  iconv  lua  miniupnpc
android-project/app/jni/SDL/: CMakeLists.txt  SDL  include  lib
android-project/app/jni/SDL_mixer/: CMakeLists.txt  SDL_mixer  include  lib
android-project/app/jni/lib/: libGL.so.1
android-project/app/jni/src/: CMakeLists.txt  s25client
android-project/app/src/main/: AndroidManifest.xml
app/: build.gradle
app/jni/: CMakeLists.txt
app/jni/boost/: CMakeLists.txt  add_module.sh
app/jni/boost/bld/: CMakeCache.txt  Makefile  cmake_install.cmake
app/jni/boost/bld/algorithm/: Makefile  cmake_install.cmake
app/jni/boost/bld/any/: Makefile  cmake_install.cmake
app/jni/boost/bld/array/: Makefile  cmake_install.cmake
app/jni/boost/bld/assert/: Makefile  cmake_install.cmake
app/jni/boost/bld/bind/: Makefile  cmake_install.cmake
app/jni/boost/bld/concept_check/: Makefile  cmake_install.cmake
app/jni/boost/bld/config/: Makefile  cmake_install.cmake
app/jni/boost/bld/container_hash/: Makefile  cmake_install.cmake
app/jni/boost/bld/core/: Makefile  cmake_install.cmake
app/jni/boost/bld/filesystem/: Makefile  cmake_install.cmake
app/jni/boost/bld/iostreams/: Makefile  cmake_install.cmake
app/jni/boost/bld/nowide/: Makefile  cmake_install.cmake
app/jni/boost/bld/program_options/: Makefile  cmake_install.cmake
app/jni/boost/bld/test/: Makefile  cmake_install.cmake
app/jni/boost/bld/throw_exception/: Makefile  cmake_install.cmake
app/jni/boost/temp/: CMakeCache.txt  Makefile  cmake_install.cmake
app/jni/boost/temp/algorithm/: Makefile  cmake_install.cmake
app/jni/boost/temp/align/: Makefile  cmake_install.cmake
app/jni/boost/temp/any/: Makefile  cmake_install.cmake
app/jni/boost/temp/array/: Makefile  cmake_install.cmake
app/jni/boost/temp/assert/: Makefile  cmake_install.cmake
app/jni/boost/temp/atomic/: Makefile  cmake_install.cmake
app/jni/boost/temp/bind/: Makefile  cmake_install.cmake
app/jni/boost/temp/concept_check/: Makefile  cmake_install.cmake
app/jni/boost/temp/config/: Makefile  cmake_install.cmake
app/jni/boost/temp/container/: Makefile  cmake_install.cmake
app/jni/boost/temp/container_hash/: Makefile  cmake_install.cmake
app/jni/boost/temp/conversion/: Makefile  cmake_install.cmake
app/jni/boost/temp/core/: Makefile  cmake_install.cmake
app/jni/boost/temp/describe/: Makefile  cmake_install.cmake
app/jni/boost/temp/detail/: Makefile  cmake_install.cmake
app/jni/boost/temp/dynamic_bitset/: Makefile  cmake_install.cmake
app/jni/boost/temp/exception/: Makefile  cmake_install.cmake
app/jni/boost/temp/filesystem/: Makefile  cmake_install.cmake
app/jni/boost/temp/function/: Makefile  cmake_install.cmake
app/jni/boost/temp/function_types/: Makefile  cmake_install.cmake
app/jni/boost/temp/functional/: Makefile  cmake_install.cmake
app/jni/boost/temp/fusion/: Makefile  cmake_install.cmake
app/jni/boost/temp/integer/: Makefile  cmake_install.cmake
app/jni/boost/temp/intrusive/: Makefile  cmake_install.cmake
app/jni/boost/temp/io/: Makefile  cmake_install.cmake
app/jni/boost/temp/iostreams/: Makefile  cmake_install.cmake
app/jni/boost/temp/iterator/: Makefile  cmake_install.cmake
app/jni/boost/temp/lexical_cast/: Makefile  cmake_install.cmake
app/jni/boost/temp/move/: Makefile  cmake_install.cmake
app/jni/boost/temp/mp11/: Makefile  cmake_install.cmake
app/jni/boost/temp/mpl/: Makefile  cmake_install.cmake
app/jni/boost/temp/nowide/: Makefile  cmake_install.cmake
app/jni/boost/temp/numeric_conversion/: Makefile  cmake_install.cmake
app/jni/boost/temp/optional/: Makefile  cmake_install.cmake
app/jni/boost/temp/predef/: Makefile  cmake_install.cmake
app/jni/boost/temp/preprocessor/: Makefile  cmake_install.cmake
app/jni/boost/temp/program_options/: Makefile  cmake_install.cmake
app/jni/boost/temp/random/: Makefile  cmake_install.cmake
app/jni/boost/temp/range/: Makefile  cmake_install.cmake
app/jni/boost/temp/regex/: Makefile  cmake_install.cmake
app/jni/boost/temp/scope/: Makefile  cmake_install.cmake
app/jni/boost/temp/smart_ptr/: Makefile  cmake_install.cmake
app/jni/boost/temp/static_assert/: Makefile  cmake_install.cmake
app/jni/boost/temp/system/: Makefile  cmake_install.cmake
app/jni/boost/temp/test/: Makefile  cmake_install.cmake
app/jni/boost/temp/throw_exception/: Makefile  cmake_install.cmake
app/jni/boost/temp/tokenizer/: Makefile  cmake_install.cmake
app/jni/boost/temp/tuple/: Makefile  cmake_install.cmake
app/jni/boost/temp/type_index/: Makefile  cmake_install.cmake
app/jni/boost/temp/type_traits/: Makefile  cmake_install.cmake
app/jni/boost/temp/typeof/: Makefile  cmake_install.cmake
app/jni/boost/temp/unordered/: Makefile  cmake_install.cmake
app/jni/boost/temp/utility/: Makefile  cmake_install.cmake
app/jni/boost/temp/variant2/: Makefile  cmake_install.cmake
app/jni/boost/temp/winapi/: Makefile  cmake_install.cmake
app/jni/iconv/: CMakeLists.txt
app/jni/lua/: CMakeLists.txt
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: configure_shortcut.xml
app/src/main/res/layout/: game_config.xml  game_config_main.xml  log_viewer.xml  log_viewer_line.xml  manual_dialog.xml  text_view.xml  text_view_line.xml
app/src/main/res/menu/: overlay_bg_menu.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-de-rDE/: strings.xml
app/src/main/res/values-night/: styles.xml
app/src/main/res/xml/: shortcuts.xml
docs/: index.html
libs/arm64-v8a/lib/cmake/miniupnpc/: libminiupnpc-shared.cmake  (+4 more)
libs/arm64-v8a/lib/pkgconfig/: bzip2.pc  miniupnpc.pc
patch/: boost.patch  gl4es.patch  s25client.patch  s25client.patch_old
web-testing/: index.html
(+68 files in other folders)
