cmake_minimum_required(VERSION 3.6)

project(s25rttr)

# armeabi-v7a requires cpufeatures library
# include(AndroidNdkModules)
# android_ndk_import_module_cpufeatures()

#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-declarations")
set(LIB_DIR "${CMAKE_SOURCE_DIR}/../../libs")

set(Boost_LIBRARY_DIR 		"${LIB_DIR}/boost/${ANDROID_ABI}"			CACHE INTERNAL "" FORCE)
set(Boost_INCLUDE_DIR 		"${LIB_DIR}/boost/include"				CACHE INTERNAL "" FORCE)

set(MINIUPNPC_INCLUDE_DIR 	"${LIB_DIR}/miniupnpc/include/" 			CACHE INTERNAL "" FORCE)
set(MINIUPNPC_LIBRARY	 	"${LIB_DIR}/miniupnpc/${ANDROID_ABI}/libminiupnpc.so" 	CACHE INTERNAL "" FORCE)

set(SDL2_INCLUDE_DIR 		"${LIB_DIR}/SDL/include" 				CACHE INTERNAL "" FORCE)
set(SDL2_LIBRARY_DIR 		"${LIB_DIR}/SDL/${ANDROID_ABI}" 			CACHE INTERNAL "" FORCE)
set(SDL2_LIBRARY 		"${LIB_DIR}/SDL/${ANDROID_ABI}/libSDL2.so" 		CACHE INTERNAL "" FORCE)
set(SDL2_SDL2MAIN_LIBRARY 	"${LIB_DIR}/SDL/${ANDROID_ABI}/libSDL2main.a" 		CACHE INTERNAL "" FORCE)

set(SDL_MIXER_INCLUDE_DIR 	"${LIB_DIR}/SDL_mixer/include"				CACHE INTERNAL "" FORCE)
set(SDL_MIXER_LIBRARY_DIR 	"${LIB_DIR}/SDL_mixer/${ANDROID_ABI}"			CACHE INTERNAL "" FORCE)
set(SDL_MIXER_LIBRARIES 	"${LIB_DIR}/SDL_mixer/${ANDROID_ABI}"			CACHE INTERNAL "" FORCE)
set(SDL_MIXER_LIBRARY 		"${LIB_DIR}/SDL_mixer/${ANDROID_ABI}/libSDL2_mixer.so"	CACHE INTERNAL "" FORCE)

set(LUA_INCLUDE_DIR 		"${LIB_DIR}/lua/include" 				CACHE INTERNAL "" FORCE)
set(LUA_LIBRARY 		"${LIB_DIR}/lua/${ANDROID_ABI}/liblua.so"		CACHE INTERNAL "" FORCE)
set(LUA_LIBRARIES 		"${LIB_DIR}/lua/${ANDROID_ABI}"				CACHE INTERNAL "" FORCE)

set(BZIP2_INCLUDE_DIR 		"${LIB_DIR}/bzip2/include" 				CACHE INTERNAL "" FORCE)
set(BZIP2_LIBRARY 		"${LIB_DIR}/bzip2/${ANDROID_ABI}/libbz2.so" 		CACHE INTERNAL "" FORCE)
set(BZIP2_LIBRARIES 		"${LIB_DIR}/bzip2/${ANDROID_ABI}" 			CACHE INTERNAL "" FORCE)

set(GL4ES_INCLUDE_DIR 		"${LIB_DIR}/gl4es/include"				CACHE INTERNAL "" FORCE)
set(GL4ES_LIBRARY 		"${LIB_DIR}/gl4es/${ANDROID_ABI}/libGL.so"				CACHE INTERNAL "" FORCE)


add_library(GL SHARED IMPORTED GLOBAL)
set_target_properties(GL PROPERTIES
    IMPORTED_LOCATION "${GL4ES_LIBRARY}"
    INTERFACE_INCLUDE_DIRECTORIES "${GL4ES_INCLUDE_DIR}"
)

set(RTTR_BUILD_UPDATER OFF CACHE INTERNAL "Disabled" FORCE)
set(BUILD_TESTING OFF CACHE INTERNAL "" FORCE)
set(RTTR_BUILD_LIB ON CACHE INTERNAL "" FORCE)
set(RTTR_OPENGL GL4ES CACHE INTERNAL "" FORCE)

get_filename_component(RTTR_DATADIR "${CMAKE_CURRENT_SOURCE_DIR}/../src/main/assets/share" ABSOLUTE)
set(RTTR_DATADIR "${RTTR_DATADIR}" CACHE INTERNAL "" FORCE)

execute_process(
        COMMAND git rev-parse HEAD
        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/s25client
        RESULT_VARIABLE GIT_RESULT
        OUTPUT_VARIABLE RTTR_REVISION
        OUTPUT_STRIP_TRAILING_WHITESPACE
)
add_subdirectory(s25client)
